# musicathon26

./: .env.example  .gitignore  .vercelignore  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  pyproject.toml  pytest.ini  replit.nix.toml  tailwind.config.ts  tsconfig.json  vitest.config.ts
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
app/ask/: page.tsx
data/: chart-seed-historical.ts  chart-seed-regional.ts  chart-seed.ts
lib/: api-schemas.ts  song-redirects.ts  types.ts
logs/: telemetry.ndjson
scripts/: build-candidate-contexts.py  build-context-correlations.py  build-cultural-posture.py  build-signal-clusters.py  build-similar-edges.py  build-year-signal-profiles.py  check-env.ts  cleanup-insight-cache.mjs  db-init.ts  embed-query.py  enrich-jambase.py  enrich-musicbrainz.py  enrich-wikidata.py  enrich.py  fetch-lyrics-genius.ts  fetch-lyrics.ts  migrate-clean-bogus-entities.py  migrate-clean-duplicates.ts  migrate-clean-orphan-nodes.ts  migrate-clean-orphan-song-nodes.ts  migrate-clean-short-gazetteer.ts  migrate-clean-stale-gazetteer.py  migrate-expand-event-keywords.py  migrate-graph-ids.py  migrate-relink-songs-to-events.py  prepare-vercel-output.ts  record-demo-screen.ts  record-demo.ts  regenerate-song-redirects.ts  schema.sql  seed-chart-data.ts  seed-event-articles.ts  snapshot-data.ts
tests/: page-content.test.ts  smoke-routes.test.ts  song-dedup.test.ts  test_gazetteer_quality.py  test_graph_integrity.py  test_signal_classifiers.py  test_temporal_windows.py
tools/: README.md  test-artist-match.ts
(+167 files in other folders)
