[project]
name = "versesignal-pipeline"
version = "0.1.0"
description = "VerseSignal enrichment pipeline (embeddings, NER, themes, moods, event linking)"
requires-python = ">=3.13,<3.15"

dependencies = [
  "sentence-transformers>=5.0.0",
  "torch>=2.0.0",
  "spacy>=3.8.0",
  "gliner>=0.2.0",
  "en-core-web-sm@https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]

[project.optional-dependencies]
# PyTorch CPU index for reproducible, smaller wheels on hackathon hardware.
cpu = [
  "torch>=2.0.0",
]

[tool.uv]
# Always use CPU torch index unless GPU env is explicitly set up.
index-url = "https://download.pytorch.org/whl/cpu"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
